--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,7 +5,7 @@
   <nav>
     <ul>
       <li><a href="https://www.instagram.com/shotbyhrbvn/">Instagram</a></li>
-      <li><a href="https://www.flickr.com/people/shotbyhrbvn/">Flickr</a></li>
+      <li><a href="https://www.flickr.com/hrbvn/">Flickr</a></li>
     </ul>
   </nav>
   <section id="albumList">
@@ -17,7 +17,6 @@
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto1.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 1</h2>
     		</div>
     	</div>
     </div>
@@ -29,7 +28,6 @@
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto2.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 2</h2>
     		</div>
     	</div>
     </div>
@@ -41,7 +39,6 @@
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto3.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 3</h2>
     		</div>
     	</div>
     </div>
@@ -53,7 +50,6 @@
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto4.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 4</h2>
     		</div>
     	</div>
     </div>
@@ -65,7 +61,6 @@
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto5.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 5</h2>
     		</div>
     	</div>
     </div>
@@ -77,7 +72,6 @@
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto6.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 6</h2>
     		</div>
     	</div>
     </div>
