Updating home page before working wit the contact page

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -6,6 +6,7 @@
     <ul>
       <li><a href="https://www.instagram.com/shotbyhrbvn/">Instagram</a></li>
       <li><a href="https://www.flickr.com/hrbvn/">Flickr</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
   <section id="albumList">
@@ -13,65 +14,65 @@
     	<div class="flipper">
     		<div class="front">
     			<img src="assets/imgs/albumCoverPhoto1.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 1</h2>
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto1.png" width="300" height="200" alt="Cover Photo" />
+          <h2>Album 1</h2>
     		</div>
     	</div>
     </div>
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front">
+    			<img src="assets/imgs/albumCoverPhoto2.png" width="300" height="200" alt="Cover Photo" />
+    		</div>
+    		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto2.png" width="300" height="200" alt="Cover Photo" />
           <h2>Album 2</h2>
     		</div>
-    		<div class="back">
-    			<img src="assets/imgs/albumCoverPhoto2.png" width="300" height="200" alt="Cover Photo" />
-    		</div>
     	</div>
     </div>
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front">
+    			<img src="assets/imgs/albumCoverPhoto3.png" width="300" height="200" alt="Cover Photo" />
+    		</div>
+    		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto3.png" width="300" height="200" alt="Cover Photo" />
           <h2>Album 3</h2>
     		</div>
-    		<div class="back">
-    			<img src="assets/imgs/albumCoverPhoto3.png" width="300" height="200" alt="Cover Photo" />
-    		</div>
     	</div>
     </div>
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front">
+    			<img src="assets/imgs/albumCoverPhoto4.png" width="300" height="200" alt="Cover Photo" />
+    		</div>
+    		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto4.png" width="300" height="200" alt="Cover Photo" />
           <h2>Album 4</h2>
     		</div>
-    		<div class="back">
-    			<img src="assets/imgs/albumCoverPhoto4.png" width="300" height="200" alt="Cover Photo" />
-    		</div>
     	</div>
     </div>
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front">
+    			<img src="assets/imgs/albumCoverPhoto5.png" width="300" height="200" alt="Cover Photo" />
+    		</div>
+    		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto5.png" width="300" height="200" alt="Cover Photo" />
           <h2>Album 5</h2>
     		</div>
-    		<div class="back">
-    			<img src="assets/imgs/albumCoverPhoto5.png" width="300" height="200" alt="Cover Photo" />
-    		</div>
     	</div>
     </div>
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
     	<div class="flipper">
     		<div class="front">
     			<img src="assets/imgs/albumCoverPhoto6.png" width="300" height="200" alt="Cover Photo" />
-          <h2>Album 6</h2>
     		</div>
     		<div class="back">
     			<img src="assets/imgs/albumCoverPhoto6.png" width="300" height="200" alt="Cover Photo" />
+          <h2>Album 6</h2>
     		</div>
     	</div>
     </div>
