--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
 }
 #container header #logo {
-  background: url('../imgs/smallerLogo.png') no-repeat center center;
+  background: url('../imgs/smallerLogo2.png') no-repeat center center;
   width: 280px;
   height: 109px;
   margin: 50px auto 30px auto;
@@ -31,6 +31,9 @@ body {
 }
 #container > nav ul li:first-of-type {
   padding-right: 50px;
+}
+#container > nav ul li:first-of-type, #container > nav ul li:nth-of-type(2) {
+  padding-bottom: 35px;
 }
 #container > nav ul li a {
   color: white;
@@ -98,11 +101,22 @@ body {
 
 @media screen and (min-width: 480px) {
   #container header #logo {
-    background: url('../imgs/logo.png') no-repeat center center;
+    background: url('../imgs/newLogo2.png') no-repeat center center;
     width: 480px;
     height: 109px;
     margin: 50px auto 30px auto;
     text-indent: -9999px;
+  }
+}
+@media screen and (min-width: 600px) {
+  #container > nav {
+    width: 500px;
+  }
+  #container > nav ul li:not(:last-of-type) {
+    padding-right: 50px;
+  }
+  #container > nav ul li:first-of-type, #container > nav ul li:nth-of-type(2) {
+    padding-bottom: 0;
   }
 }
 @media screen and (min-width: 675px) {
